# physical_hashing

./: .env.example  .gitignore  Modelfile.glm-ocr-high-ctx  README.md  SETUP.md  debug_ocr.py  debug_ocr_raw.py  debug_ocr_real.py  debug_ocr_resolution.py  laporan_belajar.tex  nohup.out  pyproject.toml  requirements.txt  reset_db_oneoff.py  sdd.md  sdd_final.md  test_glm_ocr.py  test_ocr_prompts.py
arch_fingerprint_gui/: .gitignore  .metadata  README.md  pubspec.yaml
arch_fingerprint_gui/android/: gradle.properties
arch_fingerprint_gui/lib/: camera_screen.dart  document_cropper_screen.dart  main.dart  mobilesam_cropper_screen.dart  model_setup.dart  preferences_service.dart
arch_fingerprint_gui/linux/: CMakeLists.txt
arch_fingerprint_gui/test/: widget_test.dart
arch_fingerprint_gui/web/: index.html  manifest.json
docs/: 3_MODE_COMPARISON_TESTING.md  3_MODE_IMPLEMENTATION_SUMMARY.md  COMPLETE_UPGRADE_SUMMARY.md  DOCUMENT_ID_STRATEGY.md  FASTSAM_MIGRATION.md  FLUTTER_AUTO_CROP.md  MOBILESAM_SETUP.md  SAM_PREPROCESSING.md  VECTOR_ID_MANAGEMENT.md
faq/: faq1.md  faq2.md  faq3.md  faq4.md
scripts/: adb_reverse_setup.sh  arch-fingerprint.service  check_and_mark_paleography.py  export_mobilesam_onnx.py  ollama-ocr.service  reprocess_ocr.py  verify_ocr_results.py
src/: compare_preprocessing.py  convert_mobilesam_tflite.py  download_models.py  setup_sam.py  test_fastsam.py  test_inference.py
src/arch_fingerprint.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
temp_laporanBelajar/: laporan_belajar.aux
tests/: test_api.py  test_faiss_index.py  test_model.py
(+33 files in other folders)
